# search_engineering

./: .gitignore  pyproject.toml
docker/: docker-compose-w2.yml
week1/: index.py  query.py  results.md
