[tool.poetry]
name = "search-engineering"
version = "0.1.0"
description = ""
authors = ["InfiniteRecursion <infin8Recursion@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "search_engineering"}]

[tool.poetry.dependencies]
python = "^3.11"
opensearch-py = "^2.4.2"
requests = "^2.31.0"
ipython = "^8.18.1"
urljoin = "^1.0.0"
pandas = "^2.1.4"
fastparquet = "^2023.10.1"
click = "^8.1.7"
lxml = "^4.9.4"
kaggle = "^1.5.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
